# udene-sdk-go

./: .env  .npmrc  CONTRIBUTING.md  LICENSE  Package.swift  README.md  go.mod  go.sum  index.html  main.go  openapi.yaml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: swift-sdk-publish.yml
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/auth/: dependencies.py  routes.py
backend/config/: database.py  messaging.py  privacy.py
backend/middleware/: monitoring.py  privacy.py  security.py
backend/migrations/: README  env.py
backend/ml/: ensemble_detector.py  fraud_detector.py
backend/ml/models/: behavioral_model.py  bot_classifier.py  risk_scorer.py
backend/ml/training/: feedback_collector.py  model_trainer.py
backend/models/: metrics.py  privacy.py
backend/routes/: __init__.py  fraud.py  health.py  metrics.py  privacy.py
backend/services/: cache.py  messaging.py  privacy.py
backend/utils/: archival_manager.py  backup_manager.py  index_manager.py  password.py
docs/: best-practices.md  error-handling.md  getting-started.md  swift-sdk-publishing.md  swift-sdk-windows-publishing.md  webhooks.md
docs/features/: README.md
postman/: Fraud_API.postman_collection.json
scripts/: fix-swift-tests.bat  publish-swift-sdk.bat  publish-swift-sdk.sh
sdks/: CI_CD_README.md  README.md
sdks/android/: FraudDetection.kt  publish.gradle
sdks/go/: README.md  go.mod  index.html  metrics.go  openapi.yaml  vitest.config.ts
sdks/ios/: FraudDetection.swift  LICENSE  PUBLISHING.md  Package.swift  README.md  UdeneSDK.podspec  UdeneSDK.podspec.publish  create_minimal_test.ps1  main.podspec  test_and_publish.ps1  verify_sdk.ps1
sdks/java/: FraudClient.java  publish.sh
sdks/javascript/: index.js  package-lock.json  package.json  tsconfig.json
sdks/python/: README.md  fraud_client.py  setup.py
sdks/react-native/: .eslintrc.js  .npmignore  CHANGELOG.md  LICENSE  README.md  index.ts  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
sdks/ruby/: README.md  udene_sdk.gemspec
src/: App.tsx  index.css  main.tsx
src/components/: ErrorBoundary.tsx  README.md
src/config/: api.ts
src/contexts/: AuthContext.tsx
src/hooks/: README.md  use-toast.ts  useAuth.tsx  useBECDetection.ts  useBotDetection.ts  useClientMetrics.ts  useComplianceMonitoring.ts  useCurrentProject.ts  useCurrentUser.tsx  useDeviceFingerprint.ts  useInteractionTracking.ts  useInvestigationForm.ts  usePaymentProtection.ts  useRealtimeSubscriptions.ts  useRoleAuth.tsx  useRomanceScamData.ts  useServices.ts  useSessionTimeout.ts  useTrialData.ts  useUserBehavior.ts  useUsers.tsx  useUsersList.tsx
src/pages/: AdminDashboard.tsx  Blog.tsx  BlogPost.tsx  ClientDashboard.tsx  Dashboard.tsx  (+12 more)
supabase/: config.toml
(+1127 files in other folders)
