[tool.poetry]
name = "udene"
version = "0.1.0"
description = "Fraud Detection API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
Flask = "^3.0.2"
Flask-Cors = "^4.0.0"
Flask-SocketIO = "^5.3.6"
python-socketio = "^5.11.1"
python-engineio = "^4.9.0"
Flask-JWT-Extended = "^4.5.3"
Flask-Migrate = "^4.0.7"
Flask-SQLAlchemy = "^3.1.1"
Flask-Marshmallow = "^0.15.0"
Flask-Bcrypt = "^1.0.1"
Flask-Caching = "^2.1.0"
Flask-Limiter = "^3.5.0"
pydantic = "^2.6.1"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.1"
redis = "^5.0.1"
pymongo = "^4.6.1"
cassandra-driver = "^3.28.0"
aiokafka = "^0.10.0"
prometheus-client = "^0.20.0"
cryptography = "^41.0.7"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"